k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: app
          image: jdaldeco/simpleweb
          livenessProbe:
            httpGet:
              path: /liveness
              port: 50002
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: 50002
            initialDelaySeconds: 10
            periodSeconds: 3
            failureThreshold: 10
