k8s/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
spec:
  type: NodePort
  selector:
    component: app
  ports:
    - port: 50002
      targetPort: 50002
